Fix overflow issue: mask-bottom,mask-top, etc. had a total length/height of more than 100% of screen size. They were causing scroll bars to appear. Changed 90% to 80.8% The total height is now 100.8%, not enough to cause scroll bars.

--- a/styles.css
+++ b/styles.css
@@ -32,33 +32,33 @@ body {
   position: absolute;
   top: -0.8vh;
   left: 20%;
-  width: 90%;
+  width: 80.8%;
   background-color: #121212;
-  height: 0.8vh;
+  height: 0.9vh;
 }
 #mask-right {
   position: absolute;
   right: -0.8vh;
   top: 20%;
-  height: 90%;
+  height: 80.8%;
   background-color: #121212;
-  width: 0.8vh;
+  width: 0.9vh;
 }
 #mask-bottom {
   position: absolute;
   bottom: -0.8vh;
   right: 20%;
-  width: 90%;
+  width: 80.8%;
   background-color: #121212;
-  height: 0.8vh;
+  height: 0.9vh;
 }
 #mask-left {
   position: absolute;
   left: -0.8vh;
   bottom: 20%;
-  height: 90%;
+  height: 80.8%;
   background-color: #121212;
-  width: 0.8vh;
+  width: 0.9vh;
 }
 #name-heading {
   font-family: "Righteous", cursive;
